# plugins-with-pluggy

./: .gitignore  README.md  pyproject.toml  test.csv  test.json  test.yml
demo_reader/: demo_reader.py  hookspec.py  plugins.py
